<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UWInfoSession</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="employer">Employer</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="audience">Audience</string>
    <string name="programs">Programs</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="add_calendar">Add to Calendar</string>

    <drawable name="background_grey">#333333</drawable>
    <drawable name="color_white">#FFFFFF</drawable>

</resources>